falta o resto da home do projeto quazzu

--- a/materialize_themes/quazu/css/main.css
+++ b/materialize_themes/quazu/css/main.css
@@ -3,14 +3,8 @@
   background-size: cover;
   background-position: center;
   min-height: 600px;
-  color: #fff;
 }
 
-.main-header .showcase {
-  padding-top: 100px;
-}
+.main-header .showcase {}
 
-.active-link {
-  color: #d847f1;
-  font-weight: bold;
-}
+.active-link {}
